<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">מניינים קרובים</string>
    <string name="settings_title">הגדרות והתראות</string>

    <string name="btn_load_file">טעינת קובץ מניינים</string>
    <string name="btn_settings">הגדרות</string>
    <string name="btn_refresh">רענון</string>

    <string name="label_no_data">לא נטען קובץ מניינים. היכנסו ל"הגדרות" כדי לבחור קובץ JSON.</string>
    <string name="label_no_entries_for_day">אין מניינים מוגדרים ליום הזה בקובץ שנטען.</string>
    <string name="label_load_error">שגיאה בטעינת הקובץ: %1$s</string>

    <string name="label_next_minyan_title">המניין הקרוב</string>
    <string name="label_last_minyan_title">המניין האחרון שהתחיל</string>
    <string name="label_all_minyanim_title">כל המניינים היום</string>
    <string name="label_all_minyanim_title_for_day">כל המניינים - %1$s</string>

    <string name="starts_now">מתחיל ממש עכשיו</string>
    <string name="starts_in_minutes">עוד %1$d דקות</string>
    <string name="starts_in_one_minute">עוד דקה</string>
    <string name="starts_in_one_hour">עוד שעה</string>
    <string name="starts_in_one_hour_one_minute">עוד שעה ודקה</string>
    <string name="starts_in_one_hour_minutes">עוד שעה ו-%1$d דקות</string>
    <string name="starts_in_hours">עוד %1$d שעות</string>
    <string name="starts_in_hours_one_minute">עוד %1$d שעות ודקה</string>
    <string name="starts_in_hours_minutes">עוד %1$d שעות ו-%2$d דקות</string>

    <string name="started_minutes_ago">התחיל לפני %1$d דקות</string>
    <string name="started_one_minute_ago">התחיל לפני דקה</string>
    <string name="started_one_hour_ago">התחיל לפני שעה</string>
    <string name="started_one_hour_one_minute_ago">התחיל לפני שעה ודקה</string>
    <string name="started_one_hour_minutes_ago">התחיל לפני שעה ו-%1$d דקות</string>
    <string name="started_hours_ago">התחיל לפני %1$d שעות</string>
    <string name="started_hours_one_minute_ago">התחיל לפני %1$d שעות ודקה</string>
    <string name="started_hours_minutes_ago">התחיל לפני %1$d שעות ו-%2$d דקות</string>

    <string name="no_next_minyan">אין עוד מניין</string>
    <string name="no_last_minyan">עדיין לא התחיל אף מניין</string>

    <string-array name="day_letters">
        <item>א</item>
        <item>ב</item>
        <item>ג</item>
        <item>ד</item>
        <item>ה</item>
        <item>ו</item>
        <item>שבת</item>
    </string-array>

    <string-array name="day_full_names">
        <item>יום ראשון</item>
        <item>יום שני</item>
        <item>יום שלישי</item>
        <item>יום רביעי</item>
        <item>יום חמישי</item>
        <item>יום שישי</item>
        <item>שבת</item>
    </string-array>

    <string name="prayer_shacharit">שחרית</string>
    <string name="prayer_mincha">מנחה</string>
    <string name="prayer_arvit">ערבית</string>

    <string name="settings_alarms_header">התראות לפי שעה</string>
    <string name="settings_enable_shacharit">התראת שחרית</string>
    <string name="settings_enable_mincha">התראת מנחה</string>
    <string name="settings_enable_arvit">התראת ערבית</string>
    <string name="settings_set_time">קביעת שעת התראה</string>
    <string name="settings_ignore_battery">ביטול חיסכון בסוללה עבור האפליקציה (מומלץ להתראות אמינות)</string>

    <string name="settings_data_header">קובץ מניינים</string>
    <string name="settings_theme_header">ערכת נושא</string>
    <string name="theme_system">לפי המכשיר</string>
    <string name="theme_light">בהיר</string>
    <string name="theme_dark">כהה</string>

    <string name="notif_channel_name">התראות מניינים</string>
    <string name="notif_title_prefix">מניין קרוב</string>

    <string name="file_browser_title">בחירת קובץ מניינים</string>
    <string name="file_browser_up">.. (תיקייה קודמת)</string>
    <string name="file_browser_back_to_roots">.. (חזרה לרשימת האחסונים)</string>
    <string name="file_browser_cannot_open">לא ניתן לפתוח את התיקייה הזו</string>
    <string name="file_browser_permission_denied">נדרשת הרשאת גישה לאחסון כדי לעיין בקבצים</string>
    <string name="file_browser_internal_storage">📱 אחסון פנימי</string>
    <string name="file_browser_external_storage">💾 כרטיס זיכרון (אחסון חיצוני)</string>
    <string name="file_browser_roots_title">בחרו מיקום אחסון</string>

    <string name="time_picker_title">קביעת שעת התראה</string>
    <string name="time_picker_hour">שעה</string>
    <string name="time_picker_minute">דקה</string>
    <string name="btn_ok">אישור</string>
    <string name="btn_cancel">ביטול</string>

    <string name="btn_zmanim">זמני היום</string>
    <string name="zmanim_title">זמני היום</string>
    <string name="zmanim_disclaimer">חישוב אסטרונומי כללי - לא תחליף לפסיקה הלכתית מוסמכת.</string>
    <string name="zmanim_no_location">לא הוגדר מיקום. הזינו קואורדינטות למטה, או טענו קובץ מניינים שכולל אותן.</string>
    <string name="zmanim_set_location">הגדרת מיקום ידנית</string>
    <string name="zmanim_city_picker_label">בחירת עיר מהרשימה (ממלא את השדות למטה אוטומטית, אפשר גם לערוך ידנית)</string>
    <string name="zmanim_city_picker_prompt">-- בחירת עיר --</string>
    <string name="zmanim_lat_hint">קו רוחב (למשל 31.9)</string>
    <string name="zmanim_lon_hint">קו אורך (למשל 34.8)</string>
    <string name="zmanim_save_location">שמירת מיקום</string>
    <string name="zmanim_location_saved">המיקום נשמר</string>
    <string name="zmanim_invalid_location">קואורדינטות לא תקינות</string>
    <string name="zmanim_using_file_location">המיקום מבוסס על קובץ המניינים שנטען</string>

    <string name="zman_alot_hashachar">עלות השחר</string>
    <string name="zman_netz_hachama">הנץ החמה</string>
    <string name="zman_sof_zman_shema">סוף זמן קריאת שמע (גר"א)</string>
    <string name="zman_sof_zman_tefila">סוף זמן תפילה (גר"א)</string>
    <string name="zman_chatzot">חצות היום</string>
    <string name="zman_mincha_gedola">מנחה גדולה</string>
    <string name="zman_mincha_ketana">מנחה קטנה</string>
    <string name="zman_plag_hamincha">פלג המנחה</string>
    <string name="zman_shkiat_hachama">שקיעת החמה</string>
    <string name="zman_tzeit_hakochavim">צאת הכוכבים</string>

</resources>
